--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
     "chai": "^3.3.0",
     "chai-spies": "^0.7.1",
     "chalk": "^1.0.0",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "npm": "^5.8.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
   }
 }
